dist/1.0/bin/sample/retrieveUnpackaged/objects/AST_Assignment__c.object
<CustomObject>
    <description>Stores the relationships between AST and Bundle / Component or PRI</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this AST Assignment should be used (only if active)</description>
        <inlineHelpText>Indicates if this AST Assignment should be used (only if active)</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <description>Relation to Attribute Set Type</description>
        <inlineHelpText>Relation to Attribute Set Type</inlineHelpText>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>AST Assignments</relationshipLabel>
        <relationshipName>AST_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Relation to Bundle</description>
        <inlineHelpText>Relation to Bundle</inlineHelpText>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>AST Assignments</relationshipLabel>
        <relationshipName>AST_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Relation to Component</description>
        <inlineHelpText>Relation to Component</inlineHelpText>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>AST Assignments</relationshipLabel>
        <relationshipName>AST_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>GTS Location from Attribute Set Type</description>
        <formula>TEXT(Attribute_Set_Type__r.GTS_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GTS Location from Attribute Set Type</inlineHelpText>
        <label>GTS Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Item__c</fullName>
        <description>Relation to Pricing Item</description>
        <inlineHelpText>Relation to Pricing Item</inlineHelpText>
        <label>Pricing Item</label>
        <referenceTo>PricingItem__c</referenceTo>
        <relationshipLabel>AST Assignments</relationshipLabel>
        <relationshipName>AST_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>AST Assignment</label>
    <nameField>
        <displayFormat>ASA{000000000}</displayFormat>
        <label>AST Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AST Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckRelationships</fullName>
        <active>true</active>
        <errorConditionFormula>if( if(ISBLANK( Bundle__c ),0,1) + 
if(ISBLANK( Component__c ),0,1) + 
if(ISBLANK( Pricing_Item__c ),0,1) &gt; 1, true, false)</errorConditionFormula>
        <errorMessage>Only one relation can be specified at the same time: Bundle / Component or Pricing Item.</errorMessage>
    </validationRules>
</CustomObject>